<resources>
    <string name="app_name">Car Dealership Management</string>
    <!-- Strings related to login -->

    <string name="button">LOGIN</string>
    <string name="hint_1">Password</string>
    <string name="sign_up">Don\'t have an account? Register here!!</string>
    <string name="username">Username</string>
    <string name="cnfPassword">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="auto_classic_dealership">Auto Classic Dealership</string>
    <string name="logo">Logo</string>
    <string name="generate_sales_report">Generate Sales Report</string>
    <string name="add_buyer_details">Add Buyer Details</string>
    <string name="update_car_details">Update Car Details</string>
    <string name="add_car">Add Car</string>
    <string name="add_new_employee">Add New Employee</string>
    <string name="view_car">Search and View Car</string>
    <string name="logout">Logout</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="pin_code">Pincode</string>
    <string name="add_employee_button">Add Employee</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="about">About</string>
    <string name="add_buyer">Add Buyer</string>
    <string name="position">Position</string>
    <string name="address">Address</string>
    <string name="aadhar_no">Aadhar Card Number</string>
    <string name="license">Driver\'s License Number</string>
    <string name="make">Car Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="vin">VIN</string>
    <string name="body_type">Body Type</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="status">Status</string>
    <string name="buy_price">Buying Price</string>
    <string name="sell_price">Selling Price</string>
    <string name="about_app">This Car Dealership Management app is created by Anay Gupta and Aarushi Ghadiya.</string>
    <string name="change_password">Change Password</string>
    <string name="search_hint">Enter Make or Model or Color</string>
    <string name="owner_name">Owner Name</string>
    <string name="see_details">See Details</string>
    <string name="seating_capacity">Seating Capacity</string>
    <string name="menu_search">Search</string>
</resources>
