<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/auto_classic_dealership"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xxxlarge"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/icon1" />



        <android.support.design.widget.TextInputLayout
            android:id="@+id/PasswordTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_xxlarge"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/hint_1"
                android:inputType="textPassword"
                android:padding="@dimen/padding_large"
                android:singleLine="true"
                android:textSize="@dimen/text_size_xxxlarge" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/EmailTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/usernameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_xxlarge"
                android:background="@android:color/white"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="@dimen/padding_large"
                android:singleLine="true"
                android:textSize="@dimen/text_size_xxxlarge" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/button"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ForgotTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/padding_large"
            android:text="@string/forgot_password"
            android:textColor="#C0C0C0"
            android:textSize="@dimen/text_size_xlarge" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/padding_xlarge"
            android:text="@string/sign_up"
            android:textColor="#C0C0C0"
            android:textSize="@dimen/text_size_xlarge" />

    </LinearLayout>

</ScrollView>