<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    tools:context=".NewEmployeeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:paddingTop="@dimen/padding_xlarge"
            android:text="@string/add_new_employee"
            android:textAlignment="center"
            android:textColor="#FFFF00"
            android:textSize="30sp"
            android:textStyle="italic" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/FirstNameTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/first_nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/padding_xlarge"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_xlarge" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastNameTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/last_nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/padding_xlarge"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_xlarge" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/EmailTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_xlarge"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xlarge" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/MobileTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/mobileEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_no"
                android:inputType="number"
                android:padding="@dimen/padding_xlarge"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xlarge" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/calendar_icon"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/calendar_icon"
                android:onClick="setDate"
                android:padding="@dimen/padding"
                android:src="@drawable/ic_date_calendar_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/GenderTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="@dimen/padding_large"
                android:text="@string/gender"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="2sp">

                <RadioButton
                    android:id="@+id/Male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_xlarge"
                    android:text="@string/male"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/padding"
                    android:text="@string/female"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_xlarge"
                    android:text="@string/other"
                    android:textSize="18sp" />
            </RadioGroup>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/UsernameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="@dimen/padding_xlarge"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xlarge" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/PasswordTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_1"
                android:inputType="textWebPassword"
                android:padding="@dimen/padding_xlarge"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xlarge" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/CnfPasswordTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/cnfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cnfPassword"
                android:inputType="textWebPassword"
                android:padding="@dimen/padding_xlarge"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xlarge" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/CityTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/cityEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_xlarge" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/PincodeTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/pincodeEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/pin_code"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_xlarge" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/RegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xlarge"
            android:background="@drawable/buttonstyle"
            android:padding="@dimen/padding_xlarge"
            android:text="@string/add_employee_button"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_xxlarge" />

    </LinearLayout>
</ScrollView>