<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient2"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Make"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_large"
                    android:text="@string/make"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_xxlarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_large"
                    android:text="@string/model"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_xlarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/yearTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_large"
                    android:text="@string/year"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_xlarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_large"
                    android:text="@string/vin"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_xlarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_large"
                    android:text="@string/color"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_xlarge"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/detailsBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/see_details"
                android:background="@drawable/buttonstyle"
                android:layout_marginTop="90sp"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_large"
                android:gravity="center"
                android:padding="@dimen/padding_large"
                android:layout_marginBottom="90sp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>